# games

./: .gitignore  pyproject.toml
moving/: detector.py  key_fig.txt  move_object.py
omikuji/: omikuji.py
which-job/: job.py
